contacts gap fixed, hover effects to img added, prices fw  fixed, deploy issues fixed

--- a/src/styles/categories.scss
+++ b/src/styles/categories.scss
@@ -26,6 +26,11 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+    transition: transform 0.3s ease;
+
+    &:hover{
+      transform: scale(1.1);
+    }
   }
 
   &__title {
