--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -15,6 +15,7 @@
   }
   &__infos {
     margin-top: 48px;
+    height: 244px;
 
     @include page-grid;
 
@@ -34,7 +35,6 @@
         line-height: 22.4px;
         letter-spacing: 0.15px;
         font-weight: 400;
-        margin-bottom: 8px;
       }
       &--phone {
         margin-bottom: 24px;
@@ -42,10 +42,9 @@
         font-size: 16px;
         letter-spacing: 0.15px;
         line-height: 22.4px;
-
       }
 
-      &--link{
+      &--link {
         text-decoration: none;
         color: #191919;
       }
@@ -57,7 +56,6 @@
         line-height: 22.4px;
         letter-spacing: 0.15px;
         font-weight: 400;
-        margin-bottom: 8px;
       }
       &--email {
         margin-bottom: 24px;
@@ -65,9 +63,8 @@
         font-size: 16px;
         letter-spacing: 0.15px;
         line-height: 22.4px;
-
       }
-      &--link{
+      &--link {
         text-decoration: none;
         color: #191919;
       }
@@ -79,7 +76,6 @@
         line-height: 22.4px;
         letter-spacing: 0.15px;
         font-weight: 400;
-        margin-bottom: 8px;
       }
       &--address {
         font-weight: 400;
@@ -87,9 +83,8 @@
         letter-spacing: 0.15px;
         line-height: 22.4px;
         color: #191919;
-
       }
-      &--link{
+      &--link {
         list-style: none;
         text-decoration: none;
         color: black;
