--- a/src/styles/products.scss
+++ b/src/styles/products.scss
@@ -2,4 +2,7 @@
   &__photo {
     width: 100%;
   }
+  &__price{
+    font-weight: $main-font-weight;
+  }
 }
